Updated permission, docs and provider file

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -24,7 +24,8 @@
 
 <h3>Download</h3>
 <p>
-    If you would like to taste API Provider <a href="https://devcrawlers.com/api/apiprovider/apiprovider.zip" target="_blank" download="apiprovider.zip">download it now</a>.
+    If you would like to taste API Provider <a href="https://github.com/dev-hb/apiprovider" target="_blank">git it from Github</a>.<br />
+    Don't forget to give us a star &smile;
 </p>
 
 <h3>API Provider command line file</h3>
