--- a/documentation/index.html
+++ b/documentation/index.html
@@ -137,8 +137,10 @@
 
     ?>
     </pre>
-    by accessing the 'find' action you will get the json response.<br />
-    <code>https://devcrawlers.com/api/index.php?context=mypreferredmodel&action=find</code>
+    <p>
+        by accessing the 'find' action you will get the json response.<br />
+        <code>https://devcrawlers.com/api/index.php?context=mypreferredmodel&action=find</code>
+    </p>
     <br />
     <br />
     Now that you are able to create a preferred model, lets discover what it offers you : <br />
@@ -154,19 +156,21 @@
 
 <h3>How to use this provider with Javascript</h3>
 
+<p>
+    You can use this code with Javascript frameworks too such as ReactJS, VueJS, React Native, Angular ...
+</p>
+
 <h4>Using GET request</h4>
 
 <p>
     This options is the best way to retrieve find and findAll actions
 
-    <code>
         fetch(url_to_api_provider)
         .then(response => response.json())
         .then(data => {
         // data contains you json response
         })
         .catch(err => console.log(err))
-    </code>
 </p>
 
 <h4>Using POST request</h4>
@@ -174,7 +178,6 @@
 <p>
     To ensure that your sensitive data are transferred securely for insert, update and delete actions use POST request
 
-    <code>
         fetch(url_to_api_provider,
             {
             method: "POST",
@@ -190,7 +193,6 @@
             // data contains you json response
         })
         .catch(err => console.log(err))
-    </code>
 </p>
 
 
